KB split in three

--- a/resources/server.properties
+++ b/resources/server.properties
@@ -1,5 +1,4 @@
 port=7070
-#kb_name=./resources/hans-complete-no-instances-0.1.ttl
-#kb_name=./resources/hans-complete-no-instances-0.1_20180906154301.ttl
-#kb_name=./resources/hans-complete-0.1.ttl
-kb_name=./resources/test_20180927164732.ttl
+ontology_file=./resources/hans-ontology.ttl
+rules_file=./resources/hans-rules.ttl
+instances_file=./resources/hans-instances.ttl
