changed demo ontology and kb

--- a/resources/server.properties
+++ b/resources/server.properties
@@ -1,4 +1,4 @@
 port=7070
-ontology_file=./resources/hans-ontology.ttl
-rules_file=./resources/hans-rules.ttl
-instances_file=./resources/hans-instances.ttl
+ontology_file=./resources/2018-ISWC-demo/hans-ontology.ttl
+rules_file=./resources/2018-ISWC-demo/hans-rules.ttl
+instances_file=./resources/2018-ISWC-demo/hans-instances.ttl
